# Test-preparation-03

./: CMakeLists.txt  GUI.cpp  GUI.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Task.cpp  Task.h  main.cpp  tasks.txt
